fix: unreadable text when searching in light mode

--- a/012-weather-app/src/App/Components/LocationSearch/LocationSearch.css
+++ b/012-weather-app/src/App/Components/LocationSearch/LocationSearch.css
@@ -22,7 +22,7 @@
   box-shadow: 0 0.2rem 0.6rem rgba(0, 0, 0, 0.5);
   position: absolute;
   width: 100%;
-  background-color: #2a2a2a;
+  background-color: var(--background-color);
   z-index: 1;
 }
 
@@ -33,5 +33,5 @@
 
 .search ul li:focus,
 .search ul li:hover {
-  background-color: rgba(255, 255, 255, 0.05);
+  background-color: var(--hover-background-color);
 }
